--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@stitches/react": "^1.2.8",
     "axios": "^0.27.2",
     "next": "12.1.5",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.0"
   },
   "devDependencies": {
     "@types/node": "17.0.30",
