--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@radix-ui/react-collapsible": "^0.1.6",
+    "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@stitches/react": "^1.2.8",
     "axios": "^0.27.2",
     "next": "12.1.5",
