--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-avatar": "^0.1.4",
     "@radix-ui/react-collapsible": "^0.1.6",
     "@radix-ui/react-dropdown-menu": "^0.1.6",
+    "@radix-ui/react-select": "^0.1.1",
     "@stitches/react": "^1.2.8",
     "axios": "^0.27.2",
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-hook-form": "^7.31.0"
+    "react-hook-form": "^7.31.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.30",
