--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-select": "^0.1.1",
     "@stitches/react": "^1.2.8",
-    "aws-amplify": "^4.3.30",
     "axios": "^0.27.2",
+    "firebase": "^9.9.3",
+    "firebase-admin": "^11.0.1",
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
