--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^11.0.1",
     "next": "12.1.5",
     "next-auth": "^4.3.4",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.0",
