--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
+    "moment": "^2.29.4",
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "nextjs-progressbar": "^0.0.14",
