--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@radix-ui/react-collapsible": "^0.1.6",
     "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-select": "^0.1.1",
+    "@radix-ui/react-slot": "^1.0.0",
     "@stitches/react": "^1.2.8",
+    "@supabase/auth-helpers-nextjs": "^0.2.8",
+    "@supabase/auth-helpers-react": "^0.2.4",
+    "@supabase/supabase-js": "^1.35.7",
     "axios": "^0.27.2",
+    "clsx": "^1.2.1",
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
     "moment": "^2.29.4",
@@ -34,11 +39,14 @@
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "autoprefixer": "^10.4.12",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "husky": "^8.0.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.6.4"
   },
   "config": {
