--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^0.1.4",
     "@radix-ui/react-collapsible": "^0.1.6",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-select": "^0.1.1",
     "@radix-ui/react-slot": "^1.0.0",
