--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next/font": "^13.1.6",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^0.1.4",
     "@radix-ui/react-collapsible": "^0.1.6",
@@ -18,21 +19,22 @@
     "@radix-ui/react-select": "^0.1.1",
     "@radix-ui/react-slot": "^1.0.0",
     "@stitches/react": "^1.2.8",
-    "@supabase/auth-helpers-nextjs": "^0.2.8",
-    "@supabase/auth-helpers-react": "^0.2.4",
-    "@supabase/supabase-js": "^1.35.7",
+    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.5.0",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
     "moment": "^2.29.4",
-    "next": "12.1.5",
+    "next": "^13.1.6",
     "next-auth": "^4.3.4",
     "nextjs-progressbar": "^0.0.14",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -44,9 +46,10 @@
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^13.1.6",
     "husky": "^8.0.0",
     "postcss": "^8.4.18",
+    "supabase": "^1.35.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.6.4"
   },
