--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.0",
     "react-icons": "^4.4.0",
-    "swr": "^2.0.3"
+    "swr": "^2.0.3",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
