--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@next/font": "^13.1.6",
     "@radix-ui/colors": "^0.1.8",
-    "@radix-ui/react-avatar": "^0.1.4",
-    "@radix-ui/react-collapsible": "^0.1.6",
+    "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-collapsible": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
-    "@radix-ui/react-dropdown-menu": "^0.1.6",
-    "@radix-ui/react-select": "^0.1.1",
-    "@radix-ui/react-slot": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-slot": "^1.0.1",
     "@stitches/react": "^1.2.8",
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/auth-helpers-react": "^0.3.1",
@@ -32,6 +32,7 @@
     "nextjs-progressbar": "^0.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.31.0",
     "react-icons": "^4.4.0",
     "swr": "^2.0.3",
@@ -43,6 +44,7 @@
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "autoprefixer": "^10.4.12",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "3.3.0",
@@ -50,6 +52,8 @@
     "eslint-config-next": "^13.1.6",
     "husky": "^8.0.0",
     "postcss": "^8.4.18",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "supabase": "^1.35.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.6.4"
