--- a/package.json
+++ b/package.json
@@ -7,40 +7,45 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
-    "@next/font": "^13.1.6",
+    "@prisma/client": "4.14.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-collapsible": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.1",
+    "@react-pdf/renderer": "^3.1.9",
     "@stitches/react": "^1.2.8",
-    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.5.0",
-    "axios": "^0.27.2",
+    "@supabase/supabase-js": "^2.22.0",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
-    "firebase": "^9.9.3",
-    "firebase-admin": "^11.0.1",
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.220.0",
     "moment": "^2.29.4",
-    "next": "^13.1.6",
+    "next": "^13.4.3",
     "next-auth": "^4.3.4",
     "nextjs-progressbar": "^0.0.14",
+    "prisma": "^4.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.31.0",
     "react-icons": "^4.4.0",
-    "swr": "^2.0.3",
+    "slugify": "^1.6.6",
+    "swr": "^2.1.5",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
@@ -48,6 +53,7 @@
     "autoprefixer": "^10.4.12",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "3.3.0",
+    "encoding": "^0.1.13",
     "eslint": "8.14.0",
     "eslint-config-next": "^13.1.6",
     "husky": "^8.0.0",
