--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
