feat: mudanças no layout da pagina inicial, layout de login e registro, melhorias de responsividade

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/admin/not-found.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/dashboard/admin/not-found.js"],
   "exclude": ["node_modules"]
 }
