--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@react-pdf/renderer": "^3.1.9",
     "@stitches/react": "^1.2.8",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
