feat: atualizando dependencias, mudança na fonte principal

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
-    "@prisma/client": "4.14.1",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-collapsible": "^1.0.1",
@@ -31,10 +31,10 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.220.0",
     "moment": "^2.29.4",
-    "next": "^13.4.3",
+    "next": "^13.4.16",
     "next-auth": "^4.3.4",
     "nextjs-progressbar": "^0.0.14",
-    "prisma": "^4.14.1",
+    "prisma": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.0",
