--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@react-pdf/renderer": "^3.1.9",
     "@stitches/react": "^1.2.8",
@@ -37,7 +38,7 @@
     "prisma": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.31.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.4.0",
     "slugify": "^1.6.6",
     "swr": "^2.1.5",
@@ -58,12 +59,12 @@
     "eslint": "8.14.0",
     "eslint-config-next": "^13.1.6",
     "husky": "^8.0.0",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.28",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
     "supabase": "^1.35.0",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.6.4"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "config": {
     "commitizen": {
