--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
-    "@prisma/client": "^5.1.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-collapsible": "^1.0.1",
@@ -24,24 +23,22 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@react-pdf/renderer": "^3.1.9",
     "@stitches/react": "^1.2.8",
-    "@supabase/auth-helpers-nextjs": "^0.6.1",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.22.0",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/supabase-js": "^2.33.2",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.220.0",
     "moment": "^2.29.4",
-    "next": "^13.4.16",
+    "next": "^13.5.2",
     "next-auth": "^4.3.4",
     "nextjs-progressbar": "^0.0.14",
-    "prisma": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.4.0",
     "slugify": "^1.6.6",
-    "swr": "^2.1.5",
     "zod": "^3.20.2"
   },
   "devDependencies": {
