--- a/package.json
+++ b/package.json
@@ -23,16 +23,15 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@react-pdf/renderer": "^3.1.9",
     "@stitches/react": "^1.2.8",
-    "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/supabase-js": "^2.33.2",
+    "@supabase/ssr": "^0.0.10",
+    "@supabase/supabase-js": "^2.38.4",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.220.0",
     "moment": "^2.29.4",
-    "next": "^13.5.2",
-    "next-auth": "^4.3.4",
+    "next": "^14.0.3",
     "nextjs-progressbar": "^0.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
